# data-mining-scikit-learn-4IAD

./: analyse_notebook_complet.docx  main.py  projet_datamining.ipynb  pyproject.toml
